# nx_eigen

./: .gitignore  CMakeLists.txt  Makefile  README.md  mix.exs
c_src/: nx_eigen_nif.cpp
lib/: nx_eigen.ex
lib/nx_eigen/: backend.ex  nif.ex
test/: nx_doctest_test.exs  nx_eigen_test.exs
test/nx_eigen/: lin_alg_test.exs
